Some fixes + more bib

--- a/ghtorrent.bib
+++ b/ghtorrent.bib
@@ -1,6 +1,6 @@
 @inproceedings{Gousi13,
   author = {Gousios, Georgios},
-  title = {The GHTorrent dataset and tool suite},
+  title = {The {GHTorrent} dataset and tool suite},
   booktitle = {Proceedings of the 10th Working Conference on Mining Software
     Repositories},
   series = {MSR '13},
@@ -29,4 +29,30 @@
   issn = {2160-1852},
   slideshareembed = {13184524},
   url = {/pub/ghtorrent-githubs-data-from-a-firehose.pdf}
+}
+
+@article{MKCN17,
+  author={Munaiah, Nuthan and Kroh, Steven and Cabrey, Craig and Nagappan, Meiyappan},
+  title={Curating GitHub for engineered software projects},
+  journal={Empirical Software Engineering},
+  year={2017},
+  pages={1--35},
+  issn={1573-7616},
+  doi={10.1007/s10664-017-9512-6},
+  url={http://dx.doi.org/10.1007/s10664-017-9512-6}
+}
+
+@article{KGBSGD16,
+  year = {2016},
+  issn = {1573-7616},
+  journal = {Empirical Software Engineering},
+  doi = {10.1007/s10664-015-9393-5},
+  title = {An in-depth study of the promises and perils of mining {GitHub}},
+  publisher = {Springer US},
+  keywords = {Mining software repositories; git; GitHub; Code reviews},
+  author = {Kalliamvakou, Eirini and Gousios, Georgios and Blincoe, Kelly and Singer, Leif and German, DanielM. and Damian, Daniela},
+  pages = {2035--2071},
+  volume = {21},
+  number = {5},
+  url = {/pub/promises-perils-github-extended.pdf}
 }
